[gd_scene load_steps=3 format=3 uid="uid://bq0jwg431l5jk"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_fpw7q"]
[ext_resource type="Theme" uid="uid://c2cxprenj6tso" path="res://main_menu.tres" id="1_ho0km"]

[node name="main_menu" type="Node"]
script = ExtResource("1_fpw7q")

[node name="Node2D" type="Node2D" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="Node2D"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="label_gamename" type="Label" parent="Node2D/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ho0km")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_shadow_color = Color(0.807359, 0.640084, 0.044396, 1)
theme_override_font_sizes/font_size = 100
text = "Massive Destruction"
uppercase = true

[node name="button_start_continue" type="Button" parent="Node2D/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ho0km")
text = "START GAME"

[node name="button_quit" type="Button" parent="Node2D/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ho0km")
text = "QUIT"

[connection signal="pressed" from="Node2D/CenterContainer/VBoxContainer/button_start_continue" to="." method="_on_button_start_continue_pressed"]
[connection signal="pressed" from="Node2D/CenterContainer/VBoxContainer/button_quit" to="." method="_on_button_quit_pressed"]
